<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="alert_error_add_item">Ops… something are wrong</string>
    <string name="alert_list_empty">Your cart\'s empty</string>
    <string name="alert_text_name_empty">Product name is empty!</string>
    <string name="alert_text_value_empty">The value\'s empty!</string>

    <string name="app_name">Marketplace List</string>

    <string name="bottomsheet_functions_button">Got it, yup!</string>
    <string name="bottomsheet_functions_description">In order for you to get the most out of your list, we allow you to clean or share your list! Just click there on the 3 (three) dots.</string>
    <string name="bottomsheet_functions_title">We are always looking out for you!</string>
    <string name="bottomsheet_onboarding_button_welcome">Let\'s use it!</string>
    <string name="bottomsheet_onboarding_description_welcome">Thanks for being a part of this. We hope we can help you with your purchases.</string>
    <string name="bottomsheet_onboarding_title_welcome">A thank\'s message</string>

    <string name="button_text_add">Add to list</string>
    <string name="button_text_edit">Edit</string>
    <string name="button_text_edit_finish">Done!</string>

    <string name="content_description_back_button">Back to the shopping list screen</string>
    <string name="content_description_button_minus">Decrease amount value</string>
    <string name="content_description_button_more">Show more options</string>
    <string name="content_description_button_plus">Add amount value</string>
    <string name="content_description_button_settings">To setting screen</string>
    <string name="content_description_button_trash">Remove your item</string>
    <string name="content_description_item_cart">Item %s: %s value is %s and your amount is %s</string>

    <string name="dialog_currency_option_dollar_button">Dollar</string>
    <string name="dialog_currency_option_real_button">Real</string>
    <string name="dialog_currency_title">Choose one of the currency</string>
    <string name="dialog_message_delete">Are you sure you want to delete this item?</string>
    <string name="dialog_permission_body">In order to get closer to you and be more helpful, I\'m always helping you shop better in supermarkets, helping you not forget what to include on your list, helping you look for better prices and so on! If it makes sense to you, be sure to activate it, if you don\'t think it\'s necessary, you can refuse. If you change your mind, you can access the settings and enable it so that your list can send you notifications!</string>
    <string name="dialog_permission_button_accept">Great!</string>
    <string name="dialog_permission_button_recuse">No, thanks</string>
    <string name="dialog_permission_title">Why does your list send notifications?</string>

    <string name="footer_button_text">New item</string>

    <string name="fragment_title_about">About app</string>
    <string name="fragment_title_add_item">Add item</string>
    <string name="fragment_title_cart">Cart</string>
    <string name="fragment_title_details">Details</string>
    <string name="fragment_title_edit_item">Edit Item</string>
    <string name="fragment_title_general">General</string>
    <string name="fragment_title_settings">Settings</string>

    <string name="hint_name_item" translatable="false">Ex.: Banana</string>

    <string name="intent_title_shared">Share to…</string>

    <string name="item_about_option_description_privacy_policy">tap here for more information</string>
    <string name="item_about_option_title_privacy_policy">Privacy Policy</string>
    <string name="item_about_option_title_version">Version</string>
    <string name="item_general_option_description">Current: %s</string>
    <string name="item_general_option_description_dollar">Current: Dollar - $</string>
    <string name="item_general_option_description_real">Current: Real - R$</string>
    <string name="item_general_option_title_currency">Currency format</string>
    <string name="item_general_option_title_theme">Theme</string>
    <string name="item_settings_option_description_general">theme and currency format</string>
    <string name="item_settings_option_title_about">About app</string>
    <string name="item_settings_option_title_general">General</string>

    <string name="menu_clear_cart">Clear Cart</string>
    <string name="menu_shared_list">Shared</string>

    <string name="message_cart_empty">
        Your list is empty :(
        \n\n
        Start by clicking the button below!
    </string>
    <string name="message_confirm">Yes</string>
    <string name="message_negative">No</string>
    <string name="message_shared_description">* product: %s\n* amount: %d\n* value: %s\n\n</string>
    <string name="message_shared_footer">*The purchase total is %s*\n\nThe list was made using Lucas Alvarenga\'s Shopping List app!\n\nhttps://play.google.com/store/apps/details?id=com.alvarengadev.marketplacelist</string>
    <string name="message_shared_title">Hello, this is my shopping list that I made!\n\n</string>

    <string name="msg_token_fmt" translatable="false">Get Token firebase message - %s</string>

    <string name="text_total_cart" translatable="false">Total: %s</string>
    <string name="text_value_details">Value: %s</string>

    <string name="title_name_item">Name</string>
    <string name="title_quantity_item">Quantity:</string>
    <string name="title_quantity_item_with_value">Amount: %s</string>
    <string name="title_value_item">Product Value</string>

    <string name="toast_cart_empty">Your cart\'s empty!</string>
    <string name="toast_cart_permissions">To receive tips and reminders, turn on notifications!</string>

    <string name="value_default_quantity" translatable="false">1</string>
</resources>
