<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/settingsFragment">
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.settings.fragments.SettingsFragment"
        android:label="@string/fragment_title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_generalFragment"
            app:destination="@id/generalFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/generalFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.settings.fragments.GeneralFragment"
        android:label="@string/fragment_title_general"
        tools:layout="@layout/fragment_general" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.settings.fragments.AboutFragment"
        android:label="@string/fragment_title_about"
        tools:layout="@layout/fragment_about" />
</navigation>