<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/cartFragment">

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.cart.CartFragment"
        android:label="@string/fragment_title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_cartFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.add.AddOrEditFragment"
        android:label="@string/fragment_title_add_item"
        tools:layout="@layout/fragment_add" >
        <argument
            android:name="ItemId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.alvarengadev.marketplacelist.ui.fragments.details.FragmentDetails"
        android:label="@string/fragment_title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="Item"
            app:argType="com.alvarengadev.marketplacelist.data.models.Item" />
        <action
            android:id="@+id/action_detailsFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>
</navigation>