<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_generic"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        android:orientation="vertical">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bottomsheet_functions_title"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginVertical="@dimen/small_size"
            android:contentDescription="@null"
            app:srcCompat="@drawable/image_happy" />

        <TextView
            style="@style/SmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_size"
            android:text="@string/bottomsheet_functions_description"
            android:textAlignment="center"
            android:textSize="@dimen/normalText" />

        <Button
            android:id="@+id/btnGotItNews"
            style="@style/ButtonDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/bottomsheet_functions_button" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>