<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_generic"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/llContainerBottomSheetOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginOrPadding24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleOnboarding"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginOrPaddingDefault"
            android:text="@string/bottomsheet_onboarding_title_welcome"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/tvDescriptionOnboarding"
            style="@style/SmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginOrPaddingDefault"
            android:text="@string/bottomsheet_onboarding_description_welcome"
            android:textAlignment="center"
            android:textSize="@dimen/normalText" />

        <Button
            android:id="@+id/btnGotItOnboarding"
            style="@style/ButtonDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/bottomsheet_onboarding_button_welcome" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>